Remove use of somewhat-charged word
Consider using a word like 'fun', 'engaging' or 'intriguing'.

--- a/core/client/tpl/settings/general.hbs
+++ b/core/client/tpl/settings/general.hbs
@@ -29,7 +29,7 @@
                 {{else}}
                     <a class="button-add js-modal-logo" >Upload Image</a>
                 {{/if}}
-                <p>Display a sexy logo for your publication</p>
+                <p>Display a logo for your publication</p>
             </div>
 
             <div class="form-group">
