--- a/ghost/admin/assets/sass/modules/global.scss
+++ b/ghost/admin/assets/sass/modules/global.scss
@@ -216,7 +216,7 @@ blockquote {
 
     small {
         display: inline-block;
-        margin: 0.8em 0 0.8em 1.5em;;
+        margin: 0.8em 0 0.8em 1.5em;
         font-size:0.9em;
         color: $brown;
 
@@ -347,7 +347,6 @@ table {
             background: transparent;
         }
     }
-
 }
 
 // General Navigation
