Fix extra semi-colon in sass
Related to #1033 but needs TryGhost/Casper#32 to close

- Remove extra semi-colon

--- a/core/client/assets/sass/modules/global.scss
+++ b/core/client/assets/sass/modules/global.scss
@@ -216,7 +216,7 @@ blockquote {
 
     small {
         display: inline-block;
-        margin: 0.8em 0 0.8em 1.5em;;
+        margin: 0.8em 0 0.8em 1.5em;
         font-size:0.9em;
         color: $brown;
 
@@ -347,7 +347,6 @@ table {
             background: transparent;
         }
     }
-
 }
 
 // General Navigation
