--- a/ghost/admin/tpl/modals/markdown.hbs
+++ b/ghost/admin/tpl/modals/markdown.hbs
@@ -15,7 +15,7 @@
             </tr>
             <tr>
                 <td><em>Emphasize</em></td>
-                <td>__text__</td>
+                <td>_text_</td>
                 <td>Ctrl / Cmd + I</td>
             </tr>
             <tr>
