--- a/ghost/admin/assets/sass/layouts/users.scss
+++ b/ghost/admin/assets/sass/layouts/users.scss
@@ -206,8 +206,8 @@
 
         .img {
             display: block;
-            width: 100%;
-            height: 100%;
+            width: 110px;
+            height: 110px;
             background-image: url(/shared/img/user-image.png);
             background-size: cover;
             background-position: center center;
