The scroll bar is hidden in chrome and alignment if off in IE and FF.

--- a/core/client/assets/sass/modules/global.scss
+++ b/core/client/assets/sass/modules/global.scss
@@ -1162,7 +1162,7 @@ main {
     position: absolute;
     top:0;
     left:0;
-    right:0;
+    right:16px;
     z-index: 400;
     height: 40px;
     padding: 12px 15px;
