Added ability to set post type to post or page.
closes #969

- Added post type toggle to admin ui
- Added post type indicator in content list in admin ui
- Added post type update indicator flash messages
- Added homepage post type exclusion (exclude pages)

--- a/core/client/assets/sass/layouts/manage.scss
+++ b/core/client/assets/sass/layouts/manage.scss
@@ -114,6 +114,23 @@
                 border-bottom: $lightbrown 1px solid;
                 position:relative;
 
+                .entry-meta {
+                    .post-type {
+                        background-color: #5ba4e5;
+                        border-radius: 2px;
+                        font-size: 10px;
+                        padding: 1px 3px;
+                        margin: 0 5px 0 0;
+                        color: #fff;
+
+                        &.post-type-page {
+                            background-color: #E55B5B;
+                        }
+                    }
+
+
+                }
+
                 a {
 
                     display:block;
@@ -153,7 +170,8 @@
                     }
 
                     .entry-title { font-weight: bold; }
-                    .entry-meta { color: $darkgrey; }
+                    .entry-meta { color: $darkgrey; 
+                    }
 
                     .views {
                         @include icon($i-stats, 10px, $darkgrey);
