--- a/core/server/views/editor.hbs
+++ b/core/server/views/editor.hbs
@@ -60,6 +60,17 @@
                             <input id="pub-date" class="post-setting-date" type="text" value=""><!--<span class="post-setting-calendar"></span>-->
                         </div>
                     </li>
+                    <li class="post-setting">
+                        <div class="post-setting-label">
+                            <label for="pub-date">Post Type</label>
+                        </div>
+                        <div class="post-setting-field">
+                            <select id="type" class="post-setting-page">
+                              <option value="1">Page</option>
+                              <option value="0">Post</option>
+                            </select>
+                        </div>
+                    </li>
                     <li><a href="#" class="delete hidden">Delete This Post</a></li>
                 </ul>
             </section>
