--- a/core/client/tpl/list-item.hbs
+++ b/core/client/tpl/list-item.hbs
@@ -1,6 +1,11 @@
 <a class="permalink{{#if featured}} featured{{/if}}" href="#">
     <h3 class="entry-title">{{{title}}}</h3>
     <section class="entry-meta">
+        {{#if page}}
+            <span class="post-type post-type-page">Page</span>
+        {{else}}
+            <span class="post-type post-type-post">Post</span>
+        {{/if}}
         <time datetime="2013-01-04" class="date">
             {{#if published}}
                 Published {{date published_at timeago="True"}}
