Added ability to mark post as static.
closes #969

- Added post static toggle to admin ui
- Added post static indicator in content list in admin ui
- Added post static update indicator flash messages
- Added homepage static post exclusion
- Added static page body class

--- a/core/client/tpl/list-item.hbs
+++ b/core/client/tpl/list-item.hbs
@@ -2,11 +2,16 @@
     <h3 class="entry-title">{{{title}}}</h3>
     <section class="entry-meta">
         <time datetime="2013-01-04" class="date">
-            {{#if published}}
-                Published {{date published_at timeago="True"}}
+            {{#if page}}
+                Static Page
             {{else}}
-                <span class="status-draft">Draft</span>
+                {{#if published}}
+                    Published {{date published_at timeago="True"}}
+                {{else}}
+                    <span class="status-draft">Draft</span>
+                {{/if}}
             {{/if}}
+
         </time>
         {{!<span class="views">1,934</span>}}
     </section>
