--- a/core/server/views/editor.hbs
+++ b/core/server/views/editor.hbs
@@ -60,6 +60,14 @@
                             <input id="pub-date" class="post-setting-date" type="text" value=""><!--<span class="post-setting-calendar"></span>-->
                         </div>
                     </li>
+                    <li class="post-setting">
+                        <div class="post-setting-label">
+                            <label for="pub-date">Static</label>
+                        </div>
+                        <div class="post-setting-field">
+                            <input type="checkbox"class="post-setting-static" value="1">
+                        </div>
+                    </li>
                     <li><a href="#" class="delete hidden">Delete This Post</a></li>
                 </ul>
             </section>
