--- a/ghost/admin/tpl/list-item.hbs
+++ b/ghost/admin/tpl/list-item.hbs
@@ -1,4 +1,4 @@
-<a class="permalink{{#if featured}} featured{{/if}}" href="#">
+<a class="permalink{{#if featured}} featured{{/if}}" href="#" title="Edit this post">
     <h3 class="entry-title">{{{title}}}</h3>
     <section class="entry-meta">
         <time datetime="2013-01-04" class="date">
