--- a/core/server/views/editor.hbs
+++ b/core/server/views/editor.hbs
@@ -33,7 +33,7 @@
 <footer id="publish-bar">
     <nav>
         <section id="entry-tags" href="#" class="left">
-            <label class="tag-label" for="tags"><span class="hidden">Tags</span></label>
+            <label class="tag-label" for="tags" title="Tags"><span class="hidden">Tags</span></label>
             <div class="tags"></div>
             <input type="hidden" class="tags-holder" id="tags-holder">
             <input class="tag-input" id="tags" type="text" data-input-behaviour="tag" />
@@ -42,7 +42,7 @@
         <div class="right">
 
             <section id="entry-controls">
-                <a class="entry-settings" href="#" data-toggle=".entry-settings-menu"><span class="hidden">Post Settings</span></a>
+                <a class="entry-settings" href="#" data-toggle=".entry-settings-menu" title="Post Settings"><span class="hidden">Post Settings</span></a>
                 <ul class="entry-settings-menu menu-right overlay">
                     <li class="post-setting">
                         <div class="post-setting-label">
@@ -66,7 +66,7 @@
 
             <section id="entry-actions" class="js-publish-splitbutton splitbutton-save">
                 <button type="button" class="js-publish-button button-save"></button>
-                <a class="options up" data-toggle="ul" href="#"><span class="hidden">Options</span></a>
+                <a class="options up" data-toggle="ul" href="#" title="Post Settings"><span class="hidden">Post Settings</span></a>
                 <ul class="editor-options overlay" style="display:none">
                     <li data-set-status="published"><a href="#"></a></li>
                     <li data-set-status="draft"><a href="#"></a></li>
