--- a/core/client/tpl/preview.hbs
+++ b/core/client/tpl/preview.hbs
@@ -27,7 +27,7 @@
                     <input class="post-setting-date" type="text" value="">
                 </div>
             </li>
-            <li><a href="#" class="delete hidden">Delete</a></li>
+            <li><a href="#" class="delete hidden">Delete This Post</a></li>
         </ul>
     </section>
 </header>
