--- a/core/server/views/editor.hbs
+++ b/core/server/views/editor.hbs
@@ -43,7 +43,7 @@
 
             <section id="entry-controls">
                 <a class="entry-settings" href="#" data-toggle=".entry-settings-menu" title="Post Settings"><span class="hidden">Post Settings</span></a>
-                <ul class="entry-settings-menu menu-right overlay">
+                <ul class="post-settings-menu entry-settings-menu menu-right overlay">
                     <li class="post-setting">
                         <div class="post-setting-label">
                             <label for="url">URL</label>
