--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,13 @@ translations:
     email:        'Email'
     themes:       'temas'
     help:         'ayudar'
+  cn:
+    site_title:   'Ghost使用指南'
+    installation: '安装'
+    usage:        '使用'
+    email:        '邮件设置'
+    themes:       '主题'
+    help:         '帮助'
 ---
 <!DOCTYPE html>
 <html lang="{% if page.lang %}{{page.lang}}{% else %}en{% endif %}">
