Configurable meta_title/meta_description in post settings.
fixes #1229

--- a/core/server/views/editor.hbs
+++ b/core/server/views/editor.hbs
@@ -60,6 +60,22 @@
                             <input id="pub-date" class="post-setting-date" type="text" value=""><!--<span class="post-setting-calendar"></span>-->
                         </div>
                     </li>
+                    <li class="post-setting">
+                        <div class="post-setting-label">
+                            <label for="meta-title">Meta Title</label>
+                        </div>
+                        <div class="post-setting-field">
+                            <input id="meta-title" class="post-setting-meta-title" type="text" value="" />
+                        </div>
+                    </li>
+                    <li class="post-setting">
+                        <div class="post-setting-label">
+                            <label for="meta-description">Meta Description</label>
+                        </div>
+                        <div class="post-setting-field">
+                            <input id="meta-description" class="post-setting-meta-description" type="text" value="" />
+                        </div>
+                    </li>
                     <li><a href="#" class="delete hidden">Delete This Post</a></li>
                 </ul>
             </section>
