--- a/core/client/tpl/preview.hbs
+++ b/core/client/tpl/preview.hbs
@@ -16,15 +16,31 @@
                     <label for="url">URL</label>
                 </div>
                 <div class="post-setting-field">
-                    <input class="post-setting-slug" type="text" value="{{{slug}}}">
+                    <input id="url" class="post-setting-slug" type="text" value="{{{slug}}}">
                 </div>
             </li>
             <li class="post-setting">
                 <div class="post-setting-label">
-                    <label for="url">Pub Date</label>
+                    <label for="pub-date">Pub Date</label>
                 </div>
                 <div class="post-setting-field">
-                    <input class="post-setting-date" type="text" value="">
+                    <input id="pub-date" class="post-setting-date" type="text" value="">
+                </div>
+            </li>
+            <li class="post-setting">
+                <div class="post-setting-label">
+                    <label for="meta-title">Meta Title</label>
+                </div>
+                <div class="post-setting-field">
+                    <input id="meta-title" class="post-setting-meta-title" type="text" value="{{{meta_title}}}">
+                </div>
+            </li>
+            <li class="post-setting">
+                <div class="post-setting-label">
+                    <label for="meta-description">Meta Description</label>
+                </div>
+                <div class="post-setting-field">
+                    <input id="meta-description" class="post-setting-meta-description" type="text" value="{{{meta_description}}}">
                 </div>
             </li>
             <li><a href="#" class="delete hidden">Delete This Post</a></li>
