--- a/ghost/admin/tpl/preview.hbs
+++ b/ghost/admin/tpl/preview.hbs
@@ -42,3 +42,11 @@
 <section class="content-preview-content">
     <div class="wrapper"><h1>{{{title}}}</h1>{{{html}}}</div>
 </section>
+{{#unless title}}
+    <div class="no-posts-box">
+        <div class="no-posts">
+            <h3>You Haven't Written Any Posts Yet!</h3>
+            <form action="/ghost/editor/"><button class="button-add large" title="New Post">Write a new Post</button></form>
+        </div>
+    </div>
+{{/unless}}
