--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -97,6 +97,20 @@
           </a>
         </li>
       </ul>
+      <ul class="nav navbar-nav navbar-right">
+        {% if page.lang %}
+          <li>
+            <a href="{{ site.url }}/{% if page.chapter %}{{page.chapter}}/{% endif %}{% if page.section %}{{ page.section }}/{% endif %}">English</a>
+          </li>
+        {% endif %}
+        {% for lang in site.languages %}
+          {% if lang.key != page.lang and lang.key != 'en' %}
+            <li>
+              <a href="{{ site.url }}/{{ lang.key }}/{% if page.chapter %}{{page.chapter}}/{% endif %}{% if page.section %}{{ page.section }}/{% endif %}">{{ lang.name }}</a>
+            </li>
+          {% endif %}
+        {% endfor %}
+      </ul>
     </div>
   </nav>
 </header>
