--- a/ghost/admin/assets/sass/modules/global.scss
+++ b/ghost/admin/assets/sass/modules/global.scss
@@ -1339,22 +1339,6 @@ main {
         text-decoration: none;
     }
 
-    .image-cancel {
-        @include icon($i-x, 16px);
-        position: absolute;
-        z-index: 300;
-        color: white;
-        text-shadow: rgba(0,0,0,0.6) 0 0 3px;
-        top: 10px;
-        right: 10px;
-        text-decoration: none;
-
-        &:hover {
-            cursor: pointer;
-            color: white;
-        }
-    }
-
     input {
         &.main{
             position: absolute;
@@ -1465,24 +1449,26 @@ main {
     .image-cancel {
         @include icon($i-trash, 11px);
         position: absolute;
-        z-index: 300;
         top: 10px;
         right: 10px;
         padding: 8px;
-        background: rgba(0,0,0,0.3);
-        border-radius: $rounded;
-        color: white;
+        z-index: 300;
+        color: #fff;
         text-decoration: none;
         line-height: 0;
+        border-radius: $rounded;
+        background: rgba(0,0,0,0.6);
+        box-shadow: rgba(255,255,255,0.2) 0 0 0 1px;
 
         &:hover {
-            background: rgba(0,0,0,0.5);
+            color: #fff;
             cursor: pointer;
-            color: white;
+            background: $red;
         }
     }
 
 }//.pre-image-uploader
+
 
 /* ==========================================================================
    NProgress
