Correct Chinese language code, cross-link language versions
As discussed in #1233 and #1344
- added {{page.section}} metadata so as to be able to reference URI components (site_url, page.lang, page.chapter, page.section) individually
- refactored canonical meta tag in default layout to refer to the same page with trailing slash: site_url/[page.lang/][page.chapter/][page.section/]
- added alternate-hreflang meta tags in default layout to help search engines understand about different language versions
- added visible cross-language links in top navbar with .navbar-right styling for each page, using the URI components mentioned above to construct the different language links (essentially but not quite the same logic as for alternate-hreflang meta tags)
- included Bootstrap v3's .navbar-right styles in main.css, seeing as they seem to be missing from bootstrap.css at the moment and I don't want to mess with it. :D

It may be appropriate to edit README.md or add a CONTRIBUTING or TRANSLATING file to explain how to get started with new translations, and/or move translations to a more formal mechanism...

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,10 @@
   <meta name="description" content="{{ page.meta_description }}" />
   {% endif %}
 
-  <link rel="canonical" href="{{ site.url }}{{ page.url }}">
+  <link rel="canonical" href="{{ site.url }}/{% if page.lang %}{{ page.lang }}/{% endif %}{% if page.chapter %}{{ page.chapter }}/{% endif %}{% if page.section %}{{ page.section }}/{% endif %}">
+  {% for lang in site.languages %}
+  <link rel="alternate" hreflang="{{ lang.key }}" href="{{ site.url }}/{% if lang.key != 'en' %}{{ lang.key }}/{% endif %}{% if page.chapter %}{{ page.chapter }}/{% endif %}{% if page.section %}{{ page.section }}/{% endif %}">
+  {% endfor %}
 
   <link rel="stylesheet" href="{{ site.url }}/assets/css/bootstrap.css" >
   <link rel="stylesheet" href="{{ site.url }}/assets/css/main.css">
@@ -96,6 +99,20 @@
             {% endif %}
           </a>
         </li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        {% if page.lang %}
+          <li>
+            <a href="{{ site.url }}/{% if page.chapter %}{{ page.chapter }}/{% endif %}{% if page.section %}{{ page.section }}/{% endif %}">English</a>
+          </li>
+        {% endif %}
+        {% for lang in site.languages %}
+          {% if lang.key != page.lang and lang.key != 'en' %}
+            <li>
+              <a href="{{ site.url }}/{{ lang.key }}/{% if page.chapter %}{{ page.chapter }}/{% endif %}{% if page.section %}{{ page.section }}/{% endif %}">{{ lang.name }}</a>
+            </li>
+          {% endif %}
+        {% endfor %}
       </ul>
     </div>
   </nav>
