Initial auto update implementation
Fixes #1260

- Added update button to ugly debug UI.
- Button check for updates by parsing the location header on the
ghost-latest.zip redirect.
- If an update is available, a modal confirmation window is presented to
confirm the installation of the update.
- Installation process includes creating the `content/tmp/` folder
(unless it already exists), downloading the zip to that folder,
extracting the zip on top of the current installation and then deleting
the zip from `tmp`.
- Note the update process still requires you to manually run `npm
install` and `npm update` and restart the server. See the comments in
the associated item for more information to that end.

--- a/core/server/views/debug.hbs
+++ b/core/server/views/debug.hbs
@@ -36,6 +36,15 @@
                     </div>
                 </fieldset>
             </form>
+            <form>
+                <fieldset>
+                    <div class="form-group">
+                        <label>Update</label>
+                        <a href="javascript:void(0);" class="button-save js-update">Check for Updates</a>
+                        <p>Runs on over to Ghost.org to see if there is a newer version of Ghost.</p>
+                    </div>
+                </fieldset>
+            </form>
         </section>
     </section>
 </div>
