Import Inconsolata Google Font

--- a/core/client/assets/sass/modules/mixins.scss
+++ b/core/client/assets/sass/modules/mixins.scss
@@ -15,7 +15,7 @@
 
 
 /* =============================================================================
-   Bourbon 
+   Bourbon
    ============================================================================= */
 
 // Bourbon - http://bourbon.io/
@@ -54,6 +54,8 @@ $retina: 2 device-pixel-ratio;
 /* =============================================================================
    Typography
    ============================================================================= */
+
+@import url(http://fonts.googleapis.com/css?family=Inconsolata:400,700);
 
 $font-family: 'Open Sans', sans-serif;
 $font-family-serif: serif;
