--- a/ghost/admin/assets/sass/layouts/auth.scss
+++ b/ghost/admin/assets/sass/layouts/auth.scss
@@ -27,6 +27,10 @@
         top: 15px;
     }
 
+    input:-webkit-autofill {
+        -webkit-box-shadow: 0 0 0px 1000px $lightgrey inset !important;
+    } 
+
 }//.ghost-login
 
 .login-box,
