Add the ability to set the root URL for the administration console in config.js.

--- a/core/server/views/default.hbs
+++ b/core/server/views/default.hbs
@@ -58,6 +58,7 @@
     {{{block "bodyScripts"}}}
 
     <script>
+        Ghost.settings.adminRoot = "{{@settings.adminRoot}}";
         Ghost.init();
     </script>
 </body>
