--- a/core/client/tpl/preview.hbs
+++ b/core/client/tpl/preview.hbs
@@ -4,39 +4,46 @@
         <span class="hidden">Star</span>
     </a>
     {{! TODO: JavaScript toggle featured/unfeatured}}
-    <span class="status">{{#if published}}Published{{else}}Written{{/if}}</span>
-    <span class="normal">by</span>
-    <span class="author">{{#if author.name}}{{author.name}}{{else}}{{author.email}}{{/if}}</span>
+    <small>
+        <span class="status">{{#if published}}Published{{else}}Written{{/if}}</span>
+        <span class="normal">by</span>
+        <span class="author">{{#if author.name}}{{author.name}}{{else}}{{author.email}}{{/if}}</span>
+    </small>
     <section class="post-controls">
         <a class="post-edit" href="#" title="Edit Post"><span class="hidden">Edit Post</span></a>
         <a class="post-settings" href="#" data-toggle=".post-settings-menu" title="Post Settings"><span class="hidden">Post Settings</span></a>
-        <ul class="post-settings-menu menu-drop-right overlay">
-            <li class="post-setting">
-                <div class="post-setting-label">
-                    <label for="url">URL</label>
-                </div>
-                <div class="post-setting-field">
-                    <input class="post-setting-slug" type="text" value="{{{slug}}}">
-                </div>
-            </li>
-            <li class="post-setting">
-                <div class="post-setting-label">
-                    <label for="url">Pub Date</label>
-                </div>
-                <div class="post-setting-field">
-                    <input class="post-setting-date" type="text" value="">
-                </div>
-            </li>
-            <li class="post-setting">
-                <div class="post-setting-label">
-                    <label for="static-page">Static Page</label>
-                </div>
-                <div class="post-setting-field">
-                    <input id="static-page" class="post-setting-static-page" type="checkbox" value="">
-                </div>
-            </li>                
-            <li><a href="#" class="delete hidden">Delete This Post</a></li>
-        </ul>
+        <div class="post-settings-menu menu-drop-right overlay">
+            <form>
+                <table class="plain">
+                    <tr class="post-setting">
+                        <td class="post-setting-label">
+                            <label for="url">URL</label>
+                        </td>
+                        <td class="post-setting-field">
+                            <input id="url" class="post-setting-slug" type="text" value="" />
+                        </td>
+                    </tr>
+                    <tr class="post-setting">
+                        <td class="post-setting-label">
+                            <label for="pub-date">Pub Date</label>
+                        </td>
+                        <td class="post-setting-field">
+                            <input id="pub-date" class="post-setting-date" type="text" value=""><!--<span class="post-setting-calendar"></span>-->
+                        </td>
+                    </tr>
+                    <tr class="post-setting">
+                        <td class="post-setting-label">
+                            <span class="label">Static Page</span>
+                        </td>
+                        <td class="post-setting-item">
+                            <input id="static-page" class="post-setting-static-page" type="checkbox" value="">
+                            <label class="checkbox" for="static-page"></label>
+                        </td>
+                    </tr>
+                </table>
+            </form>
+            <a class="delete" href="#">Delete This Post</a>
+        </div>
     </section>
 </header>
 <section class="content-preview-content">
