Growl style desktop notifications
First pass. See #1349

--- a/core/client/assets/sass/layouts/editor.scss
+++ b/core/client/assets/sass/layouts/editor.scss
@@ -18,6 +18,12 @@
 
 .editor {
 
+    #notifications {
+        @include breakpoint($biggerthan-mobile) {
+            bottom: 40px;
+        }
+    }
+
     // The main post title
     .entry-title {
         @extend %box;
