--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -90,15 +90,13 @@
             {% endif %}
           </a>
         </li>
+        {% if page.lang == null %}
         <li>
-          <a href="{{ site.url }}/{% if page.lang %}{{page.lang}}/{% endif %}translations/">
-            {% if page.lang %}
-              {{site.translations.[page.lang].translations}}
-            {% else %}
+          <a href="{{ site.url }}/translations/">
               Translations
-            {% endif %}
           </a>
         </li>
+        {% endif %}
         <li>
           <a href="http://ghost.org/forum/">
             {% if page.lang %}
