Post-Image: basic functionality for adding post images now in place. Img URL only

--- a/core/server/views/editor.hbs
+++ b/core/server/views/editor.hbs
@@ -8,7 +8,11 @@
                    value="" tabindex="1">
         </section>
     </header>
-
+        <section class="box entry-image">
+            <input type="text" id="entry-image"
+                   placeholder="Image URL (http://www.website.com/image.jpg)"
+                   value="" tabindex="1">
+        </section>
     <section class="entry-markdown active">
         <header class="floatingheader">
             <small>Markdown</small>
