fix tag input field
closes #1532
- giving higher priority to css selector for .tag-input in order to override global input-style
- remove padding set by global input-style to align nicely with already set tags

--- a/core/client/assets/sass/layouts/editor.scss
+++ b/core/client/assets/sass/layouts/editor.scss
@@ -564,15 +564,18 @@ body.zen {
     }
 }
 
-.tag-input {
+input[type="text"].tag-input {
     display: inline-block;
+    padding: 0;
     vertical-align: top;
     color: $lightgrey;
     font-weight: 300;
     background: transparent;
     border: none;
 
-    &:focus {outline: none;}
+    &:focus {
+        outline: none;
+    }
 }
 
 .tag {
