--- a/core/server/views/content.hbs
+++ b/core/server/views/content.hbs
@@ -5,7 +5,7 @@
           <section class="content-filter">
               <small>All Posts</small>
           </section>
-          <a href="/ghost/editor/" class="button button-add" title="New Post"><span class="hidden">New Post</span></a>
+          <a href="{{url}}/ghost/editor/" class="button button-add" title="New Post"><span class="hidden">New Post</span></a>
       </header>
       <section class="content-list-content">
           <ol></ol>
