Added embeddable tweets

--- a/core/client/assets/sass/screen.scss
+++ b/core/client/assets/sass/screen.scss
@@ -25,6 +25,9 @@
     @import "modules/forms";
     /* All the styles controlling forms and form fields. */
 
+    @import "modules/embeds";
+    /* All custom styling for the embeds like the Twitter Embed */
+
 
 
 /* ==========================================================================
