--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -98,6 +98,15 @@
         </li>
         {% endif %}
         <li>
+          <a href="{{ site.url }}/{% if page.lang %}{{page.lang}}/{% endif %}faq/">
+            {% if page.lang %}
+              {{site.translations.[page.lang].faq}}
+            {% else %}
+              FAQ
+            {% endif %}
+          </a>
+        </li>
+        <li>
           <a href="http://ghost.org/forum/">
             {% if page.lang %}
               {{site.translations.[page.lang].help}}
