CSS and layout fixes for image uploader
closes #1673
- dropzone icon doesn't appear when filestorage is false
- proper cursor and no selection on icon
- cleaned up some sass

--- a/core/client/assets/sass/modules/global.scss
+++ b/core/client/assets/sass/modules/global.scss
@@ -1333,7 +1333,6 @@ main {
 
     .image-url,
     .image-upload {
-        @include icon($i-link, 12px);
         line-height: 12px;
         padding: 10px;
         display: block;
@@ -1342,7 +1341,21 @@ main {
         left: 0;
         color: $brown;
         text-decoration: none;
+        @include user-select(none);
+
+        &:hover {
+          cursor: pointer;
+        }
     }
+
+    .image-webcam {
+      @include icon($i-camera, 12px);
+    }
+
+    .image-url {
+      @include icon($i-link, 12px);
+    }
+
     .image-upload {
       @include icon($i-image, 12px);
     }
@@ -1358,17 +1371,7 @@ main {
       margin: 0 0 0 10px;
     }
 
-    .image-webcam {
-        @include icon($i-camera, 12px);
-        line-height: 12px;
-        padding: 10px;
-        display: block;
-        position: absolute;
-        bottom: 0;
-        right: 0;
-        color: $brown;
-        text-decoration: none;
-    }
+
 
     input {
         &.main{
