Set min-height on user profile cover image
Fixes #1752

--- a/core/client/assets/sass/layouts/users.scss
+++ b/core/client/assets/sass/layouts/users.scss
@@ -146,6 +146,7 @@
         line-height: 0;
         width: 100%;
         height: auto;
+        min-height: 180px;
     }
 
     .edit-cover-image {
