Still doesn't work.

--- a/core/client/tpl/settings/general.hbs
+++ b/core/client/tpl/settings/general.hbs
@@ -76,5 +76,15 @@
             </div>
 
         </fieldset>
+
+        <fieldset>
+            <div class="form-group custom-site-html-container">
+                <label for="blog-custom-site-html">Custom site Html</label>
+                <textarea id="blog-custom-site-html">{{customSiteHtml}}</textarea>
+                <p>
+                    Put a html tag. Here you can insert site variables and it will be available across the whole pages in the blog.
+                </p>
+            </div>
+        </fieldset>
     </form>
 </section>
